# openapi-tui

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  flake.nix
.github/workflows/: cd.yml
assets/: openapi-3.1-schema.json
examples/: petstore.json  webhook.json
examples/github/: LICENSE
nix/: default.nix
openapi-31/: .gitignore  Cargo.toml  README.md  openapi-in-openapi.json
openapi-31/src/: lib.rs
openapi-31/src/v31/: authorization_code.rs  client_credentials.rs  components.rs  contact.rs  encoding.rs  example.rs  examples.rs  external_documentation.rs  header.rs  implicit.rs  info.rs  license.rs  link.rs  media_type.rs  mod.rs  oauth_flows.rs  openapi.rs  operation.rs  parameter.rs  password.rs  path_item.rs  reference.rs  request_body.rs  response.rs  responses.rs  schema.rs  security_scheme.rs  server.rs  server_variable.rs  tag.rs
src/: action.rs  app.rs  cli.rs  component.rs  components.rs  config.rs  main.rs  pages.rs  panes.rs  request.rs  response.rs  state.rs  tui.rs  utils.rs
src/components/: home.rs  mod.rs  schema_editor.rs  schema_viewer.rs
src/components/schema_editor/: breadcrumb.rs  page.rs  state.rs
src/formatters/: json.rs  mod.rs
src/pages/: home.rs  mod.rs  phone.rs
src/panes/: address.rs  apis.rs  body_editor.rs  footer.rs  header.rs  history.rs  mod.rs  parameter_editor.rs  profiles.rs  request.rs  response.rs  response_viewer.rs  tags.rs
static/: call.tape  demo.tape  filter.tape  fullscreen.tape  nested-refs.tape  switch-server.tape  webhooks.tape
