[package]
name = "openapi-tui"
version = "0.6.1"
edition = "2021"
description = "This TUI allows you to list and browse APIs described by the openapi specification."

build = "build.rs"

authors = ["Hamed Zaghaghi <hamed.zaghaghi@gmail.com>"]
repository = "https://github.com/zaghaghi/openapi-tui"
homepage = "https://github.com/zaghaghi/openapi-tui"
license = "MIT"
readme = "README.md"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
openapi-31 = { version = "0.4.0" }
pretty_assertions = "1.4.0"
ratatui = { version = "0.26.1", features = ["serde", "macros"] }
reqwest = { version = "0.11.26", features = ["native-tls-vendored"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.32"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
syntect = "5.2.0"
syntect-tui = "3.0.2"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tui-input = "0.8.0"
tui-prompts = "0.3.8"

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }
