[package]
name = "openapi-tui"
version = "0.10.0"
edition = "2021"
description = "This TUI allows you to list and browse APIs described by the openapi specification."

build = "build.rs"

authors = ["Hamed Zaghaghi <hamed.zaghaghi@gmail.com>"]
repository = "https://github.com/zaghaghi/openapi-tui"
homepage = "https://github.com/zaghaghi/openapi-tui"
license = "MIT"
readme = "README.md"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.4", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.30"
human-panic = "2.0.0"
humansize = "2.1.3"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.21"
openapi-31 = { version = "0.4.0" }
pretty_assertions = "1.4.0"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
reqwest = { version = "0.12.2", features = ["native-tls-vendored"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34+deprecated"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.2", features = ["derive"] }
syntect = "5.2.0"
syntect-tui = "3.0.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tui-input = "0.11.1"
tui-textarea = "0.7.0"

[build-dependencies]
anyhow = "1.0.86"
vergen-git2 = { version = "1.0.0", features = ["build", "cargo"] }
