[package]
name = "openapi-31"
version = "0.1.0"
description = "OpenAPI v3.1 Specification"

authors = ["Hamed Zaghaghi <hamed.zaghaghi@gmail.com>"]
repository = "https://github.com/zaghaghi/openapi-tui"
homepage = "https://github.com/zaghaghi/openapi-tui"

license = "MIT"
edition = "2021"

[dependencies]
serde = "1.0.197"
serde_derive = "1.0.197"
serde_with = "3.7.0"
serde_json = "1.0.114"
derive_more = "0.99.17"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
